--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <p><br><br>Tiada kesucian menjadi sempurna jika ada salah satu kebencian tertinggal dalam hati. Di hari yang fitri ini, terkirim dari lubuk hati paling dalam, kata maaf atas segala salah dan khilaf. Selamat Hari Raya Idul Fitri 1445 H, mohon maaf lahir dan batin.</p>
 
-        <a href="./asset/thr.pdf" class="btn">thr nihh...</a>
+        <a href="./asset/thr1.pdf" class="btn">thr nihh...</a>
         <div class="pic1">
           <img src="./asset/ied.jpg">
         </div>
